# customer-churn-prediction

./: .gitignore  LICENSE  README.md  customer_churn_prediction_modelling.ipynb  main.py  pyproject.toml  utils.py
models/: dt_model.pkl  xgboost-featureEngineered_model_.pkl
