[tool.poetry]
name = "Customer-Churn-Prediction-App"
version = "0.1.0"
description = ""
authors = ["Sushmitha Halli Sudhakara <hssushmitha047@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.27.2"
pandas = "^2.2.3"
numpy = "^1.26.4"
openai = "^1.58.1"
plotly = "^5.24.1"
xgboost = "^1.3.0"
scikit-learn = "1.6.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"